--- a/src/main/resources/sample.fxml
+++ b/src/main/resources/sample.fxml
@@ -1,8 +1,82 @@
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
+<?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
-</GridPane>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+   <top>
+      <MenuBar BorderPane.alignment="CENTER">
+        <menus>
+          <Menu mnemonicParsing="false" text="File">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Close" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Edit">
+            <items>
+              <MenuItem mnemonicParsing="false" text="Delete" />
+            </items>
+          </Menu>
+          <Menu mnemonicParsing="false" text="Help">
+            <items>
+              <MenuItem mnemonicParsing="false" text="About" />
+            </items>
+          </Menu>
+        </menus>
+      </MenuBar>
+   </top>
+   <bottom>
+      <ToolBar prefHeight="53.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+         <items>
+            <ButtonBar buttonMinWidth="200.0" prefHeight="40.0" prefWidth="200.0">
+               <buttons>
+                  <Button mnemonicParsing="false" onAction="#pressme" prefHeight="28.0" prefWidth="182.0" text="Press Me!">
+                     <font>
+                        <Font name="Algerian" size="15.0" />
+                     </font>
+                  </Button>
+               </buttons></ButtonBar>
+            <Button alignment="CENTER" graphicTextGap="6.0" mnemonicParsing="false" onAction="#loginIsPressed" prefHeight="28.0" prefWidth="182.0" text="Login" textAlignment="CENTER">
+               <font>
+                  <Font name="Algerian" size="15.0" />
+               </font>
+            </Button>
+         </items>
+      </ToolBar>
+   </bottom>
+   <center>
+      <VBox prefHeight="313.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+         <children>
+            <TextField fx:id="username" alignment="TOP_LEFT" pickOnBounds="false" prefHeight="26.0" prefWidth="84.0" promptText="int user">
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="150.0" right="150.0" top="70.0" />
+               </VBox.margin>
+            </TextField>
+            <PasswordField fx:id="pass" alignment="TOP_LEFT" prefHeight="26.0" prefWidth="83.0" promptText="int pass">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets left="150.0" right="150.0" top="75.0" />
+               </VBox.margin>
+            </PasswordField>
+         </children>
+      </VBox>
+   </center>
+</BorderPane>
