--- a/src/main/resources/goodby.fxml
+++ b/src/main/resources/goodby.fxml
@@ -4,10 +4,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.Controller">
    <children>
-      <TextField alignment="CENTER" layoutX="116.0" layoutY="124.0" prefHeight="131.0" prefWidth="368.0" promptText="You'll get a free cookie, tnx!" text="You'll get a free cookie, tnx!">
+      <TextField alignment="CENTER" editable="false" layoutX="116.0" layoutY="124.0" prefHeight="131.0" prefWidth="368.0" promptText="You'll get a free cookie, tnx!" text="You'll get a free cookie, tnx!">
          <font>
             <Font name="Arial Black" size="20.0" />
          </font>
