Implemented welcome interface

--- a/src/main/resources/scene/welcome.fxml
+++ b/src/main/resources/scene/welcome.fxml
@@ -1,9 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="scene.Welcome"
-            prefHeight="400.0" prefWidth="600.0">
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SplitMenuButton?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <HBox alignment="TOP_RIGHT" prefHeight="400.0" prefWidth="613.0" spacing="20.0" BorderPane.alignment="CENTER">
+         <children>
+            <TableView prefHeight="400.0" prefWidth="329.0">
+               <columns>
+                  <TableColumn minWidth="0.0" prefWidth="84.0" text="Name" />
+                  <TableColumn prefWidth="78.4000244140625" resizable="false" text="Price" />
+                  <TableColumn prefWidth="76.79998779296875" text="Quantity" />
+                  <TableColumn prefWidth="88.79998779296875" text="Description" />
+               </columns>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </TableView>
+            <Region HBox.hgrow="ALWAYS" />
+            <SplitMenuButton mnemonicParsing="false" text="SplitMenuButton">
+              <items>
+                <MenuItem mnemonicParsing="false" text="ADD" />
+                <MenuItem mnemonicParsing="false" text="REMOVE" />
+                  <MenuItem mnemonicParsing="false" text="BUY" />
+              </items>
+            </SplitMenuButton>
+         </children>
+      </HBox>
+   </top>
+</BorderPane>
