--- a/src/main/resources/scene/welcome.fxml
+++ b/src/main/resources/scene/welcome.fxml
@@ -9,11 +9,11 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.Controller">
    <top>
       <HBox alignment="TOP_RIGHT" prefHeight="400.0" prefWidth="613.0" spacing="20.0" BorderPane.alignment="CENTER">
          <children>
-            <TableView prefHeight="400.0" prefWidth="329.0">
+            <TableView fx:id="tableView" prefHeight="400.0" prefWidth="329.0">
                <columns>
                   <TableColumn minWidth="0.0" prefWidth="84.0" text="Name" />
                   <TableColumn prefWidth="78.4000244140625" resizable="false" text="Price" />
