Frontend and Backend small changes

--- a/src/main/resources/scene/welcome.fxml
+++ b/src/main/resources/scene/welcome.fxml
@@ -7,13 +7,12 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.Controller">
    <top>
       <HBox alignment="TOP_RIGHT" prefHeight="400.0" prefWidth="613.0" spacing="20.0" BorderPane.alignment="CENTER">
          <children>
-            <TableView fx:id="tableView" prefHeight="400.0" prefWidth="329.0">
+            <TableView fx:id="tableView">
                <columns>
                   <TableColumn fx:id="name" minWidth="0.0" prefWidth="84.0" text="Name" />
                   <TableColumn fx:id="price" prefWidth="78.4000244140625" resizable="false" text="Price" />
@@ -21,16 +20,18 @@
                   <TableColumn fx:id="description" prefWidth="88.79998779296875" text="Description" />
                </columns>
                <HBox.margin>
-                  <Insets />
+                  <Insets right="120.0" />
                </HBox.margin>
             </TableView>
-            <Region HBox.hgrow="ALWAYS" />
-            <SplitMenuButton mnemonicParsing="false" text="SplitMenuButton">
+            <SplitMenuButton mnemonicParsing="false" text="Quantity actions">
               <items>
                 <MenuItem mnemonicParsing="false" text="ADD" />
                 <MenuItem mnemonicParsing="false" text="REMOVE" />
                   <MenuItem mnemonicParsing="false" text="BUY" />
               </items>
+               <HBox.margin>
+                  <Insets top="50.0" />
+               </HBox.margin>
             </SplitMenuButton>
          </children>
       </HBox>
